logs/jld-scripts.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jld_scripts'...
Listing './lib/python3.5/site-packages/jld_scripts/agents'...
Compiling './lib/python3.5/site-packages/jld_scripts/agents/notifier.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/agents/notifier.py", line 37
    print "%s: %s" % (app_name, msg)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/agents/squeeze.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/agents/squeeze.py", line 112
    print "* not found: %s" % key
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jld_scripts/agents/watcher.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/agents/watcher.py", line 127
    print "! modified_closed (%s) symlink(%s)" % (path, symlink)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jld_scripts/music'...
Listing './lib/python3.5/site-packages/jld_scripts/music/lastfm'...
Compiling './lib/python3.5/site-packages/jld_scripts/music/lastfm/base.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/music/lastfm/base.py", line 89
    print "Missing state for event: " + str(event)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/music/lastfm/parser_gettracks.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/music/lastfm/parser_gettracks.py", line 100
    print "!!! do_begin_track"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jld_scripts/res'...
Compiling './lib/python3.5/site-packages/jld_scripts/res/__init__.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/res/__init__.py", line 15
    print get_res_path()
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jld_scripts/scripts'...
Compiling './lib/python3.5/site-packages/jld_scripts/scripts/id3info.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/scripts/id3info.py", line 11
    print "This script requires the 'mutagen' package available on PyPi"
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jld_scripts/scripts/lastfm_gettracks.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/scripts/lastfm_gettracks.py", line 50
    except optparse.OptionError, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/scripts/m3u2symlinks.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/scripts/m3u2symlinks.py", line 143
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/scripts/squeezecenter_utils.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/scripts/squeezecenter_utils.py", line 74
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/scripts/watcher.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/scripts/watcher.py", line 71
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jld_scripts/system'...
Compiling './lib/python3.5/site-packages/jld_scripts/system/base.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/system/base.py", line 59
    print "************* mdispatch: dropped: orig(%s) obj_orig(%s) mtype(%s)" % (orig, this_source, mtype)
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/system/messaging.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/system/messaging.py", line 32
    print "%s%s: %s" % (self.prepend, self.name, msg)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/system/mos.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/system/mos.py", line 94
    print mounts()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/system/mswitch.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/system/mswitch.py", line 130
    print ":::: do_interest: source(%s) mtype(%s) interest(%s) snooping(%s)" % (agent_name, mtype, interest, snooping)
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jld_scripts/system/path.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/system/path.py", line 11
    def safe_makedirs(path, mode=0777, ex=False):
                                    ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/jld_scripts/system/state.py'...
***   File "./lib/python3.5/site-packages/jld_scripts/system/state.py", line 46
    print sm.retrieve("a_float")
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jld_scripts-0.8.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
